# mapchete-hub-cli

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  LICENSE  README.md  README.rst  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml  sync-dependencies.yml
conda/: meta.yaml
src/mapchete_hub_cli/: __init__.py  _client.py  api.py  cli.py  client.py  enums.py  exceptions.py  job.py  log.py  parser.py  settings.py  time.py
src/mapchete_hub_cli/cli/: __init__.py  cancel.py  clean.py  execute.py  job.py  jobs.py  main.py  options.py  progress.py  retry.py  test.py
tests/: conftest.py  custom_dask_specs.json  example.mapchete  example.py  test_api.py  test_api_integration.py  test_cli_integration.py  test_client.py  test_client_integration.py  test_time.py
